<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical" >
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">


		<EditText android:id="@+id/title" 
		  android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_weight="1"
			android:hint="@string/title"/>
	</LinearLayout>

	<EditText
	    android:id="@+id/body"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:gravity="top"
	    android:hint="@string/body"
	    android:scrollbars="vertical" />
	
	<Button
	    android:id="@+id/confirm"
	    android:layout_width="87dp"
	    android:layout_height="wrap_content"
	    android:text="@string/confirm" />

</LinearLayout>